--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </ul>
               <p>Please feel free to take a look at my webiste and feel free to <a href="#contact">contact me</a>.</p>
           </section>
-          <section class="with-line">
+          <section class="with-line" id="background">
               <h3>Pete's Background</h3>
               <p>After graduating college, I became an art teacher and worked with beginners and professionals. I love art and my works have been featured in major art galleries across the globe.</p>  
               <p>If you're are looking to hire an artist of if you're an artist looking for a collaborator for your next project, please reach out! I'm excited to work with other artists to create new art.</p>
