--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                 <img src="images/melted-rainbow.png" alt="Melted Rainbow">
                 <p>Edison bulb single-origin coffee snackwave, actually ennui locavore shabby chic forage.</p>
               </article>
+              <div class="with-line"></div>
           </section>
-          <section class="with-line" id="contact">
+          <section id="contact">
               <h2>Contact</h2>
               <p>I'd love to hear from you! Please feel free to contact or follow me:</p>
               <ol>
